# NovaWeb

./: Cargo.toml  README.md  cargo_check.out
examples/: template.html  test.novaw  test_features.novaw
src/: ast.rs  environment.rs  grammar.pest  interpreter.rs  main.rs  parser.rs  server.rs  template.pest  template.rs  value.rs
