[package]
name = "nova-web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "novaw"
path = "src/main.rs"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
walkdir = "2.4"
